infra/test.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    priorityclass-webhook: enabled
  name: foo
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: foo
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: foo
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
